# sumcheck

./: Cargo.toml  README.md
src/: poly.rs  sumcheck.rs
